# omega-update

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  AUTOMATION_TOOLS_COMPLETION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_AUTOMATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOWNLOAD_UPDATE_SYSTEM_SUMMARY.md  FINAL_REFACTORING_COMPLETION.md  FINAL_SUMMARY.md  FOLDER_UPLOAD_FEATURE.md  INDEPENDENT_TOOLS_GUIDE.md  INDIVIDUAL_FILE_UPLOAD.md  LICENSE  MIGRATION_GUIDE.md  Makefile  PACKAGING_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SETUP_SUMMARY.md  PROJECT_STRUCTURE.md  PYLANCE_TYPE_ERRORS_COMPREHENSIVE_FIX_REPORT.md  Pipfile  README.md  REFACTORING_COMPLETE_SUMMARY.md  REMOTE_SERVER_SETUP.md  SOLUTION_SUMMARY.md  STORAGE_MANAGEMENT_FEATURES.md  TOOL_SEPARATION_SUMMARY.md  UPLOAD_TOOL_FIXES.md  advanced_upload_gui.py  auto_upload.py  auto_upload_batch.py  build_download_tool.py  common_utils.py  difference_detector.py  (+42 more)
config/: batch_config_sample.json  config.json  file_filter.json  upload_config.json
deployment/: DEPLOYMENT_CHECKLIST.md  GUI_USAGE.md  MANUAL_UPLOAD.md  QUICK_START.md  README.md  SIMPLE_DEPLOY_GUIDE.md  WINDOWS_DEPLOY.md  auto_server_config.ps1  auto_server_setup.ps1  auto_upload.ps1  auto_upload_no_prompt.ps1  deploy.sh  diagnose.sh  fix_common_issues.sh  fix_server_limits.sh  gui_config.json  main.py  manage_updates.py  manual_commands.txt  nginx.conf  omega-update-server.service  omega_update_gui.py  passwordless_upload.ps1  quick_deploy.sh  set_permissions.ps1  setup_ssh_key.ps1  simple_auto_upload.ps1  simple_package_maker.py  simple_upload.ps1  simple_upload_fixed.ps1  start_gui.sh  upload_files.ps1  upload_files.sh
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  FILE_COMPARISON_TECHNICAL_DETAILS.md  INCREMENTAL_UPLOAD_GUIDE.md  INCREMENTAL_UPLOAD_IMPLEMENTATION.md  README.md  SIMPLIFIED_VERSION_SYSTEM_DESIGN.md  TROUBLESHOOTING.md
releases/OmegaDownloadTool_v3.1.0/: README.md  使用说明.txt
reports/: cloud_base_version_summary.json  comprehensive_codebase_audit.json  legacy_import_fix_test.json
scripts/: build_download_tool.py  comprehensive_codebase_audit.py  deploy_enhanced_version.ps1  diagnose_upload_issue.py  final_system_verification.py  fix_upload_issues.py  migrate_to_simplified_system.py  remove_remaining_clutter.py  set_cloud_base_version.py  setup_ssh_key.sh  test_connection.py  test_original_upload_fix.py  test_upload_fix.py  validate_config.py
server/: __init__.py  enhanced_main.py  simplified_api.py  simplified_database.py  storage_manager.py
server_setup/deploy_scripts/: deploy_api_v2.py
server_setup/maintenance_tools/: database_fixer.py
tools/: __init__.py
tools/common/: difference_detector.py  storage_handler.py  ui_factory.py
tools/download/: download_handler.py  download_manager.py  download_tool.py  local_file_scanner.py  simplified_download_tool.py
tools/upload/: auto_upload.py  auto_upload_batch.py  difference_viewer.py  simplified_upload_tool.py  upload_handler.py  upload_tool.py
tools/verification/: system_verifier.py
update_server/api/: version_api.py
update_server/models/: database.py
updater/: __init__.py
updater/src/: __init__.py  main.py
updater/src/core/: __init__.py  app_manager.py  config.py  incremental_updater.py  update_manager.py
updater/src/gui/: __init__.py
updater/src/utils/: __init__.py  binary_diff.py  file_utils.py
updates/: version_analysis_report.txt
upload_download/: __init__.py
upload_download/common/: __init__.py  api_client.py  storage_handler.py  ui_factory.py
upload_download/download/: __init__.py  download_gui.py  download_manager.py
upload_download/upload/: __init__.py  auto_upload.py  auto_upload_batch.py  incremental_uploader.py  upload_gui.py  upload_handler.py  upload_tool.py
